--- a/app/src/main/res/layout/activity_services.xml
+++ b/app/src/main/res/layout/activity_services.xml
@@ -40,7 +40,8 @@
         android:text="Start Services"
         android:onClick="startService"
         android:layout_below="@+id/imageButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        tools:ignore="OnClick" />
 
     <Button
         android:layout_width="wrap_content"
@@ -52,6 +53,7 @@
         android:layout_alignLeft="@+id/button2"
         android:layout_alignStart="@+id/button2"
         android:layout_alignRight="@+id/button2"
-        android:layout_alignEnd="@+id/button2" />
+        android:layout_alignEnd="@+id/button2"
+        tools:ignore="OnClick" />
 
 </RelativeLayout>
